--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="style/sectiontop.css">
     <link rel="stylesheet" href="style/sectionmain.css">
     <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/mediaquery.css">
+
+    <script src="js/index.js"></script>
 
 
     <!-- LINK GOOGLE ICONS -->
@@ -25,9 +28,8 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="nav_header">
             <ul>
-                <li></li>
                 <li><a href="#">Arquivo</a></li>
                 <li><a href="#">Editar</a></li>
                 <li><a href="#">Seleção</a></li>
